Known bugs fixed

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Sai's Workspace",
-  "id": "1296254605020549418",
+  "name": "Workspace",
+  "id": "1296254605020549419",
   "api": "1.0.0",
   "main": "code.js",
   "capabilities": [],
