Changes made to the code
Changes made to the code with improved functionality

--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,9 @@
 {
-  "name": "Work/Space",
-  "id": "1369954309330916868",
+  "name": "Figma to Flutter",
+  "id": "1234567890123456789",
   "api": "1.0.0",
   "main": "code.js",
-  "capabilities": [],
-  "enableProposedApi": false,
-  "documentAccess": "dynamic-page",
-  "editorType": [
-    "figma"
-  ],
   "ui": "ui.html",
-  "networkAccess": {
-    "allowedDomains": [
-      "none"
-    ]
- 
-  }
-  
+  "editorType": ["figma","dev"],
+  "capabilities": ["inspect"]
 }
