--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "lib": ["es6"],
+    "moduleResolution": "node",
     "strict": true,
+    "skipLibCheck": true,
     "typeRoots": [
-      "./node_modules/@types",
       "./node_modules/@figma"
-    ]
+    ],
+    "lib": ["es6"]
   }
 }
