--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,11 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "moduleResolution": "node",
+    "lib": ["es6"],
     "strict": true,
-    "skipLibCheck": true,
     "typeRoots": [
+      "./node_modules/@types",
       "./node_modules/@figma"
-    ],
-    "lib": ["es6"]
+    ]
   }
 }
